spacing for paragraphs and para container fixed

--- a/src/components/Age_restriction/Age_restriction.css
+++ b/src/components/Age_restriction/Age_restriction.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 p {
-  margin-top: 80px;
+  margin-top: 40px;
   margin-left: 40px;
   margin-right: 40px;
   color: #4dd2ff;
@@ -48,6 +48,7 @@ button {
   justify-content: space-evenly;
   align-items: center;
   width: 1000px;
+  margin-top: 50px;
 }
 
 .button-container {
